--- a/二十六史/总目录.md
+++ b/二十六史/总目录.md
@@ -1,53 +1,53 @@
 # 总目录
 
-[史记](史记/目录.md)
+[史记](史记/目录)
 
-[汉书](汉书/目录.md)
+[汉书](汉书/目录)
 
-[后汉书](后汉书/目录.md)
+[后汉书](后汉书/目录)
 
-[三国志](三国志/目录.md)
+[三国志](三国志/目录)
 
-[晋书](晋书/目录.md)
+[晋书](晋书/目录)
 
-[宋书](宋书/目录.md)
+[宋书](宋书/目录)
 
-[南齐书](南齐书/目录.md)
+[南齐书](南齐书/目录)
 
-[梁书](梁书/目录.md)
+[梁书](梁书/目录)
 
-[陈书](陈书/目录.md)
+[陈书](陈书/目录)
 
-[魏书](魏书/目录.md)
+[魏书](魏书/目录)
 
-[北齐书](北齐书/目录.md)
+[北齐书](北齐书/目录)
 
-[周书](周书/目录.md)
+[周书](周书/目录)
 
-[隋书](隋书/目录.md)
+[隋书](隋书/目录)
 
-[南史](南史/目录.md)
+[南史](南史/目录)
 
-[北史](北史/目录.md)
+[北史](北史/目录)
 
-[旧唐书](旧唐书/目录.md)
+[旧唐书](旧唐书/目录)
 
-[新唐书](新唐书/目录.md)
+[新唐书](新唐书/目录)
 
-[旧五代史](旧五代史/史目录.md)
+[旧五代史](旧五代史/史目录)
 
-[新五代史](新五代史/史目录.md)
+[新五代史](新五代史/史目录)
 
-[宋史](宋史/目录.md)
+[宋史](宋史/目录)
 
-[辽史](辽史/目录.md)
+[辽史](辽史/目录)
 
-[金史](金史/目录.md)
+[金史](金史/目录)
 
-[元史](元史/目录.md)
+[元史](元史/目录)
 
-[明史](明史/目录.md)
+[明史](明史/目录)
 
-[新元史](新元史/目录.md)
+[新元史](新元史/目录)
 
-[清史稿](清史稿/目录.md)
+[清史稿](清史稿/目录)
